--- a/docs/22_feature_extraction/statistics_with_nyxus.ipynb
+++ b/docs/22_feature_extraction/statistics_with_nyxus.ipynb
@@ -13,7 +13,7 @@
    "id": "72e582f6-d043-46f9-84c7-043817d71c58",
    "metadata": {},
    "source": [
-    "The [Nyxus](https://github.com/PolusAI/nyxus) library contains a large number of features that can be extracted from image data. It can be installed using mamba/conda:\n",
+    "The [Nyxus](https://github.com/PolusAI/nyxus) library contains a large number of features that can be extracted from image data. It can be installed using pip:\n",
     "\n",
     "<!--\n",
     "```\n",
